# simple-data-counter

./: .gitignore  README.md  core_api.py  core_api_config.ini.template  counter.py  file_parser.py  influxdb_config.ini.template  main.py  output.txt  pyproject.toml
data_counter/: counter.py  file_parser.py  main.py
